# Crisislens.AI

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_refresh_tokens.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/src/crisislens/: __init__.py  main.py
backend/src/crisislens/api/: __init__.py  deps.py
backend/src/crisislens/api/v1/: router.py
backend/src/crisislens/application/: __init__.py
backend/src/crisislens/application/interfaces/: __init__.py
backend/src/crisislens/application/services/: ai_service.py  audit_service.py  auth_service.py  orchestrator.py
backend/src/crisislens/domain/: __init__.py
backend/src/crisislens/infrastructure/: __init__.py
backend/src/crisislens/models/: __init__.py  ai_report.py  audit_log.py  base.py  conversation.py  emergency_resource.py  enums.py  hospital.py  incident.py  incident_attachment.py  incident_image.py  location.py  message.py  notification.py  refresh_token.py  risk_assessment.py  shelter.py  user.py  weather_snapshot.py
backend/src/crisislens/schemas/: __init__.py  ai.py  auth.py  base.py  communication.py  facilities.py  incident.py  incident_media.py  intelligence.py  location.py  user.py
backend/src/crisislens/utils/: __init__.py  datetime_utils.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_ai_endpoints.py  test_ai_orchestrator.py  test_hardening.py
(+97 files in other folders)
